# sam2

./: .gitignore  pyproject.toml
src/sam/: coords.py  dim_red.py  model.py  trajectory.py  utils.py
src/sam/analysis/: melting_curves.py
src/sam/data/: aa_protein.py  aa_topology.py  cg_protein.py  common.py  sequences.py  topology.py  trajectory_reader.py
src/sam/diffusion/: common.py  diffusers_dm.py
src/sam/evaluation/: scores.py
src/sam/minimizer/: __init__.py  runner.py
src/sam/minimizer/params/: mizu.20022025.json  mizu_cfg.atlas.yaml  mizu_cfg.atlas_A.yaml  mizu_cfg.mdcath.yaml  mizu_cfg.mdcath_A.yaml
src/sam/nn/: af2.py  af3.py  common.py  ema.py  generator.py  geometric.py
src/sam/nn/noise_prediction/: attention.py  edges.py  embedding.py  template.py
src/sam/openfold/data/: data_modules.py  data_pipeline.py  data_transforms.py  data_transforms_multimer.py  feature_pipeline.py  feature_processing_multimer.py  input_pipeline.py  input_pipeline_multimer.py  mmcif_parsing.py  msa_pairing.py  templates.py
src/sam/openfold/model/: embedders.py  evoformer.py  heads.py  model.py  msa.py  outer_product_mean.py  pair_transition.py  primitives.py  structure_module.py  template.py  torchscript.py  triangular_attention.py  triangular_multiplicative_update.py
src/sam/openfold/np/: protein.py
src/sam/openfold/utils/: all_atom_multimer.py  chunk_utils.py  exponential_moving_average.py  feats.py  loss.py  multi_chain_permutation.py  script_utils.py  (+1 more)
src/sam/scripts/: __init__.py  ensemble_analysis.py  ensemble_comparison.py  generate_ensemble.py
(+21 files in other folders)
